Fixing a z-index issue

--- a/css/less/source/base.less
+++ b/css/less/source/base.less
@@ -41,7 +41,7 @@
   background-color: @toolbar__background;
   color: @toolbar__color;
   position: fixed;
-  z-index: 1;
+  z-index: 9;
   a {
     color: inherit;
     text-decoration: none;
